second commit of yummy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,35 @@
 <div>
   <nav class=" h-20 mt-7 ">
-      <div  class="flex justify-evenly items-center " >
-        <div class="items-center " >
-          <h1 class="text-3xl font-extrabold items-center   " >Yummy <span class="text-red-500" >.</span></h1>
-        </div>
-        <div>
-          <ul class="flex space-x-5 font-bold  ">
-            <li  class="text-[#7F7F90]  hover:text-black " >Home</li>
-            <li class="text-[#7F7F90]  hover:text-black " >About</li>
-            <li class="text-[#7F7F90]  hover:text-black " >Menu</li>
-            <li class="text-[#7F7F90]  hover:text-black " >Events</li>
-            <li class="text-[#7F7F90]  hover:text-black " >Chefs</li>
-            <li class="text-[#7F7F90]  hover:text-black " >Gallery</li>
-            <li class="text-[#7F7F90]  hover:text-black " >Dropdown</li>
-            <li class="text-[#7F7F90]  hover:text-black " >Contact</li>
-
-          </ul>
-        </div>
-        <div> <button class="px-6 py-2 rounded-3xl bg-red-500 text-white text-sm ">Book a Table</button></div>
+    <div class="flex justify-evenly items-center ">
+      <div class="items-center ">
+        <h1 class="text-3xl font-extrabold items-center   ">Yummy <span class="text-red-500">.</span></h1>
       </div>
+      <div>
+        <ul class="flex space-x-5 font-bold  ">
+          <li class="text-[#7F7F90]  hover:text-black ">Home</li>
+          <li class="text-[#7F7F90]  hover:text-black ">About</li>
+          <li class="text-[#7F7F90]  hover:text-black ">Menu</li>
+          <li class="text-[#7F7F90]  hover:text-black ">Events</li>
+          <li class="text-[#7F7F90]  hover:text-black ">Chefs</li>
+          <li class="text-[#7F7F90]  hover:text-black ">Gallery</li>
+          <li class="text-[#7F7F90]  hover:text-black ">Dropdown</li>
+          <li class="text-[#7F7F90]  hover:text-black ">Contact</li>
+
+        </ul>
+      </div>
+      <div> <button class="px-6 py-2 rounded-3xl bg-red-500 text-white text-sm ">Book a Table</button></div>
+    </div>
   </nav>
   <div class="bg-[#EEEEEE] h-[70vh] flex justify-evenly px-9 ">
     <div class="  mb-auto mt-auto">
       <div class="space-y-6">
         <div>
-          <h1 class="text-[#676770]">Sed autem laudantium dolores. Voluptatem itaque ea consequatur<br> eveniet. Eum
+          <h1 class="text-[#676770]">Sed laudantium dolores. Voluptatem itaque ea consequatur<br> eveniet. Eum
             quas beatae cumque eum
             quaerat.</h1>
+            <h1 class="text-[#676770]">Sed laudantium dolores. Voluptatem itaque ea consequatur<br> eveniet. Eum
+              quas beatae cumque eum
+              quaerat.</h1>
         </div>
         <div class="space-x-5">
           <button class="px-6 py-2 rounded-3xl bg-red-500 text-white text-sm ">Book a Table</button>
@@ -37,10 +40,5 @@
     <div class="mt-auto mb-auto   ">
       <img class=" w-5/6 " alt="" src="assets/img/hero-img.png">
     </div>
-
   </div>
-
-
-
-
 </div>
