third commit of yummy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,31 @@
 <div>
-  <nav class=" h-20 mt-7 ">
+  <nav class=" h-16 mt-7 ">
     <div class="flex justify-evenly items-center ">
       <div class="items-center ">
         <h1 class="text-3xl font-extrabold items-center   ">Yummy <span class="text-red-500">.</span></h1>
       </div>
       <div>
         <ul class="flex space-x-5 font-bold  ">
-          <li class="text-[#7F7F90]  hover:text-black ">Home</li>
-          <li class="text-[#7F7F90]  hover:text-black ">About</li>
-          <li class="text-[#7F7F90]  hover:text-black ">Menu</li>
-          <li class="text-[#7F7F90]  hover:text-black ">Events</li>
-          <li class="text-[#7F7F90]  hover:text-black ">Chefs</li>
-          <li class="text-[#7F7F90]  hover:text-black ">Gallery</li>
-          <li class="text-[#7F7F90]  hover:text-black ">Dropdown</li>
-          <li class="text-[#7F7F90]  hover:text-black ">Contact</li>
-
+          <li class="text-[#7F7F90] font-['poppins'] tracking-wide cursor-pointer  hover:text-black ">Home</li>
+          <li class="text-[#7F7F90] font-['poppins'] tracking-wide  cursor-pointer hover:text-black ">About</li>
+          <li class="text-[#7F7F90] font-['poppins'] tracking-wide  cursor-pointer hover:text-black ">Menu</li>
+          <li class="text-[#7F7F90]  font-['poppins'] tracking-wide cursor-pointer hover:text-black ">Events</li>
+          <li class="text-[#7F7F90] font-['poppins'] tracking-wide cursor-pointer hover:text-black ">Chefs</li>
+          <li class="text-[#7F7F90] font-['poppins'] tracking-wide  cursor-pointer hover:text-black ">Gallery</li>
+          <li class="text-[#7F7F90] font-['poppins'] tracking-wide cursor-pointer hover:text-black ">Dropdown</li>
+          <li class="text-[#7F7F90] font-['poppins'] tracking-wide cursor-pointer hover:text-black ">Contact</li>
         </ul>
       </div>
-      <div> <button class="px-6 py-2 rounded-3xl bg-red-500 text-white text-sm ">Book a Table</button></div>
+      <div> <button class="px-6 py-2 rounded-3xl bg-red-600 text-white text-sm font-bold ">Book a Table</button></div>
     </div>
   </nav>
   <div class="bg-[#EEEEEE] h-[70vh] flex justify-evenly px-9 ">
     <div class="  mb-auto mt-auto">
       <div class="space-y-6">
+        <div>
+          <h1 class="text-5xl font-serif text-[#37373F] " >Enjoy Your Healthy<br>
+            Delicious Food</h1>
+        </div>
         <div>
           <h1 class="text-[#676770]">Sed laudantium dolores. Voluptatem itaque ea consequatur<br> eveniet. Eum
             quas beatae cumque eum
@@ -31,9 +34,12 @@
               quas beatae cumque eum
               quaerat.</h1>
         </div>
-        <div class="space-x-5">
-          <button class="px-6 py-2 rounded-3xl bg-red-500 text-white text-sm ">Book a Table</button>
-          <button class="text-black">Watch Video</button>
+        <div class="space-x-5 flex items-center ">
+          <button class="px-6 py-2 rounded-3xl bg-red-600 text-white text-sm font-bold hover:shadow-2xl hover:shadow-red-500 hover:bg-red-500 ">Book a Table</button>
+          <div class="space-x-2    flex       " > 
+            <img class="" alt="" src="/assets/img/playbutton.ico" >
+            <button class="text-black font-sans transition-[5000ms] ">Watch Video</button>
+          </div>
         </div>
       </div>
     </div>
