fourth changes of yummy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div>
-  <nav class=" h-16 mt-7 ">
+  <nav class=" h-20 w-full bg-white fixed ">
     <div class="flex justify-evenly items-center ">
-      <div class="items-center ">
+      <div class="items-center  ">
         <h1 class="text-3xl font-extrabold items-center   ">Yummy <span class="text-red-500">.</span></h1>
       </div>
-      <div>
-        <ul class="flex space-x-5 font-bold  ">
+      <div class="" >
+        <ul class="flex space-x-5 font-bold ">
           <li class="text-[#7F7F90] font-['poppins'] tracking-wide cursor-pointer  hover:text-black ">Home</li>
           <li class="text-[#7F7F90] font-['poppins'] tracking-wide  cursor-pointer hover:text-black ">About</li>
           <li class="text-[#7F7F90] font-['poppins'] tracking-wide  cursor-pointer hover:text-black ">Menu</li>
@@ -16,7 +16,7 @@
           <li class="text-[#7F7F90] font-['poppins'] tracking-wide cursor-pointer hover:text-black ">Contact</li>
         </ul>
       </div>
-      <div> <button class="px-6 py-2 rounded-3xl bg-red-600 text-white text-sm font-bold ">Book a Table</button></div>
+      <div> <button class=" px-6 py-2 rounded-3xl bg-red-600 text-white text-sm font-bold ">Book a Table</button></div>
     </div>
   </nav>
   <div class="bg-[#EEEEEE] h-[70vh] flex justify-evenly px-9 ">
@@ -30,9 +30,6 @@
           <h1 class="text-[#676770]">Sed laudantium dolores. Voluptatem itaque ea consequatur<br> eveniet. Eum
             quas beatae cumque eum
             quaerat.</h1>
-            <h1 class="text-[#676770]">Sed laudantium dolores. Voluptatem itaque ea consequatur<br> eveniet. Eum
-              quas beatae cumque eum
-              quaerat.</h1>
         </div>
         <div class="space-x-5 flex items-center ">
           <button class="px-6 py-2 rounded-3xl bg-red-600 text-white text-sm font-bold hover:shadow-2xl hover:shadow-red-500 hover:bg-red-500 ">Book a Table</button>
@@ -47,4 +44,33 @@
       <img class=" w-5/6 " alt="" src="assets/img/hero-img.png">
     </div>
   </div>
+
+
+<div class="" >
+  <div class="text-center p-8" >
+     <h1 class="text-xl tracking-widest text-gray-600 justify-center" >ABOUT US</h1>
+     <h1 class="text-2xl tracking-wide justify-center" >Learn More About Us</h1>
+  </div>
+  <div class="grid grid-cols-2 px-44 py-11 space-x-20" >
+      <div class="" >
+       <img class="" alt="" src="assets/img/about.jpg" >
+      </div>
+      <div class=" space-y-5 " >
+        <div class="mb-auto mt-auto"  >
+          <h1 class="text-gray-600 tracking-wider font-serif italic text-lg " >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+            Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit.
+            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.
+            Ullamco laboris nisi ut aliquip ex ea giat nulla pariatur. Excepteur sint occaecat cupidatat non proident</h1>
+        </div>
+        <div class="" ><img class="w-[12cm]" alt="" src="assets/img/about-2.jpg" ></div>
+        
+      </div>
+      
+
+  </div>
+</div>
+
+
 </div>
