--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div>
   <nav class=" h-20 w-full bg-white fixed ">
-    <div class="flex justify-evenly items-center ">
+    <div class="flex justify-evenly items-center p-5 ">
       <div class="items-center  ">
-        <h1 class="text-3xl font-extrabold items-center   ">Yummy <span class="text-red-500">.</span></h1>
+        <h1 class="text-3xl font-extrabold   ">Yummy <span class="text-red-500">.</span></h1>
       </div>
       <div class="" >
         <ul class="flex space-x-5 font-bold ">
