Created components for different menus

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -102,7 +102,7 @@
       </div>
       <div class="space-y-7">
         <div class="mb-auto mt-auto">
-          <h1 class="text-gray-600 tracking-wider font-serif italic text-lg">
+          <h1 class="text-gray-600 tracking-wider font-serif italic text-lg  ">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamco
             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
@@ -191,284 +191,37 @@
       CHECK OUR YUMMY MENU
     </h1>
   </div>
-  <div class="text-center">
+  <div class="tab text-center">
     <ul class="flex space-x-4 justify-center">
       <li
-        class="text-gray-600 text-lg font-thin font-['Poppins'] hover:text-red-600 hover:underline cursor-pointer"
+        class="tablinks text-gray-600 text-lg font-thin font-['Poppins'] hover:text-red-600 hover:underline cursor-pointer  " onclick="openTab(event, 'Tab1') "
       >
         Starters
       </li>
       <li
-        class="text-gray-600 text-lg font-thin font-['Poppins'] hover:text-red-600 hover:underline cursor-pointer"
+        class= "tablinks text-gray-600 text-lg font-thin font-['Poppins'] hover:text-red-600 hover:underline cursor-pointer" onclick="openTab(event, 'Tab2')"
       >
         Breakfast
       </li>
       <li
-        class="text-gray-600 text-lg font-thin font-['Poppins'] hover:text-red-600 hover:underline cursor-pointer"
+        class="tablinks text-gray-600 text-lg font-thin font-['Poppins'] hover:text-red-600 hover:underline cursor-pointer" onclick="openTab(event, 'Tab3')"
       >
         Lunch
       </li>
       <li
-        class="text-gray-600 text-lg font-thin font-['Poppins'] hover:text-red-600 hover:underline cursor-pointer"
+        class="tablinks text-gray-600 text-lg font-thin font-['Poppins'] hover:text-red-600 hover:underline cursor-pointer" onclick="openTab(event, 'Tab4')"
       >
         Dinner
       </li>
     </ul>
   </div>
 
-  <!-- Menu Component 1 -->
-  <div class="" id="Starters">
-    <h1 class="text-2xl text-center font-bold text-red-500">Starters</h1>
-    <div class="grid grid-cols-3 px-60 py-11 space-x-8">
-      <div
-        class="container w-96 p-6 mr-auto ml-auto text-center space-y-5 hover:scale-105 transition-all"
-      >
-        <img class="w-80" alt="" src="assets/img/menu/menu-item-1.png" />
-        <div class="space-y-1">
-          <h1
-            class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']"
-          >
-            Magnam Tiste
-          </h1>
-          <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-          <h1 class="text-2xl text-red-700 font-extrabold">$5.95</h1>
-        </div>
-      </div>
-      <div
-        class="container w-96 p-6 mr-auto ml-auto text-center space-y-5 hover:scale-105 transition-all"
-      >
-        <img class="w-80" alt="" src="assets/img/menu/menu-item-2.png" />
-        <div class="space-y-1">
-          <h1
-            class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']"
-          >
-            Aut Luia
-          </h1>
-          <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-          <h1 class="text-2xl text-red-700 font-extrabold">$14.95</h1>
-        </div>
-      </div>
-      <div
-        class="container w-96 p-6 mr-auto ml-auto text-center space-y-5 hover:scale-105 transition-all"
-      >
-        <img class="w-80" alt="" src="assets/img/menu/menu-item-3.png" />
-        <div class="space-y-1">
-          <h1
-            class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']"
-          >
-            Est Eligendi
-          </h1>
-          <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-          <h1 class="text-2xl text-red-700 font-extrabold">$8.95</h1>
-        </div>
-      </div>
-      <div
-        class="container w-96 p-6 mr-auto ml-auto text-center space-y-5 hover:scale-105 transition-all"
-      >
-        <img class="w-80" alt="" src="assets/img/menu/menu-item-4.png" />
-        <div class="space-y-1">
-          <h1
-            class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']"
-          >
-            Eos Luibusdam
-          </h1>
-          <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-          <h1 class="text-2xl text-red-700 font-extrabold">$12.95</h1>
-        </div>
-      </div>
-      <div
-        class="container w-96 p-6 mr-auto ml-auto text-center space-y-5 hover:scale-105 transition-all"
-      >
-        <img class="w-80" alt="" src="assets/img/menu/menu-item-5.png" />
-        <div class="space-y-1">
-          <h1
-            class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']"
-          >
-            Eos Luibusdam
-          </h1>
-          <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-          <h1 class="text-2xl text-red-700 font-extrabold">$12.95</h1>
-        </div>
-      </div>
-      <div
-        class="container w-96 p-6 mr-auto ml-auto text-center space-y-5 hover:scale-105 transition-all"
-      >
-        <img class="w-80" alt="" src="assets/img/menu/menu-item-6.png" />
-        <div class="space-y-1">
-          <h1
-            class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']"
-          >
-            Laboriosam Direva
-          </h1>
-          <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-          <h1 class="text-2xl text-red-700 font-extrabold">$9.95</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Menu Component 2
-  <div class="" id="Breakfast" >
-    <h1 class="text-2xl text-center font-bold text-red-500 " >Bearkfast</h1>
-  <div class="grid grid-cols-3 px-60 py-11 space-x-8 ">
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-1.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Magnam Tiste</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$5.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-2.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Aut Luia</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$14.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-3.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Est Eligendi</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$8.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-4.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Eos Luibusdam</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$12.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-5.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Eos Luibusdam</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$12.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-6.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Laboriosam Direva</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$9.95</h1>
-      </div>
-    </div>
-  </div>
-  </div>
-Menu Component 3
-  <div class="" id="Lunch" >
-    <h1 class="text-2xl text-center font-bold text-red-500 " >Lunch</h1>
-  <div class="grid grid-cols-3 px-60 py-11 space-x-8 ">
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-1.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Magnam Tiste</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$5.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-2.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Aut Luia</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$14.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-3.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Est Eligendi</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$8.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-4.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Eos Luibusdam</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$12.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-5.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Eos Luibusdam</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$12.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-6.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Laboriosam Direva</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$9.95</h1>
-      </div>
-    </div>
-  </div>
-  </div>
-<!-- Menu Component 4 -->
-  <!-- <div class="" id="Dinner" >
-    <h1 class="text-2xl text-center font-bold text-red-500 " >Dinner</h1>
-  <div class="grid grid-cols-3 px-60 py-11 space-x-8 ">
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-1.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Magnam Tiste</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$5.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-2.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Aut Luia</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$14.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-3.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Est Eligendi</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$8.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-4.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Eos Luibusdam</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$12.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-5.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Eos Luibusdam</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$12.95</h1>
-      </div>
-    </div>
-    <div class="container w-96   p-6  mr-auto ml-auto text-center space-y-5   ">
-      <img class="w-80" alt="" src="assets/img/menu/menu-item-6.png">
-      <div class="space-y-1">
-        <h1 class="text-xl mr-auto ml-auto text-gray-800 font-semibold font-['Poppins']">Laboriosam Direva</h1>
-        <h1 class="text-gray-600">Lorem, deren, trataro, filede, nerada</h1>
-        <h1 class="text-2xl text-red-700 font-extrabold ">$9.95</h1>
-      </div>
-    </div>
-  </div>
-  </div> -->
+<app-menu-items-starters></app-menu-items-starters>
+<app-menu-items-breakfast></app-menu-items-breakfast>
+<app-menu-items-lunch></app-menu-items-lunch>
+<app-menu-items-dinner></app-menu-items-dinner>
 
+  
   <div class="bg-[#EEEEEE]">
     <div class="text-center space-y-4 py-7">
       <h1
