--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,11 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+*{
+
+    margin: 0px 0px;
+    padding: 0px 0px;
+    box-sizing: border-box;
+
+}
